traversal.snake.Snake.scala.error
Compilation error:
Snake:45: error: ';' expected but 'return' found.
      }return false
       ^